fylo.css
@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

body {
	color: white;
	max-width: 100%;
	background-color: hsl(218, 28%, 13%);
}

header {
	display: flex;
	position: relative;
	margin-top: 2rem;
}

.logo img {
	padding-left: 20px;
	width: 100px;
}

nav {
	border-radius: 33px;
	position: relative;
	right: -17%;
}
nav ul {
	display: flex;
	margin-top: 4.59px;
}

nav ul li {
	list-style-type: none;
	margin-right: 20px;
	font-size: 14px;
	font-family: "Raleway", sans-serif;
}

nav ul li a {
	text-decoration: none;
	color: white;
}

.illustration1 img {
	max-width: 80%;
	margin-top: 3.5rem;
	margin-left: auto;
	margin-right: auto;
	display: block;
}

.description b {
	font-weight: 700;
	font-family: "Raleway", sans-serif;
	font-size: 1.5rem;
	display: flex;
	align-items: center;
	justify-content: center;
	max-width: 81%;
	margin: auto;
	margin-top: 3rem;
	line-height: 2rem;
}
b {
	text-align: center;
}

.description p {
	font-family: "Raleway", sans-serif;
	font-size: 1rem;
	display: flex;
	align-items: center;
	justify-content: center;
	max-width: 90%;
	margin: auto;
	margin-top: 1.4rem;
	line-height: 1.5rem;
}
p {
	text-align: center;
}

.description button {
	border: none;
	width: 60%;
	height: 50px;
	background-color: hsl(176, 68%, 64%);
	border-radius: 50px;
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 2.5rem;
	font-size: 1rem;
	font-family: "Raleway", sans-serif;
	font-weight: 600;
}

.section-two {
	display: block;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}

.devices img {
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 8rem;
	margin-bottom: 1.3rem;
}
.dev-descript {
	font-size: 1.4rem;
	font-family: "Raleway", sans-serif;
}

.dev-text {
	font-family: "Raleway", sans-serif;
	margin-top: 0.4rem;
	line-height: 1.3rem;
	max-width: 85%;
	font-size: 0.9rem;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.security img {
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 4.5rem;
	margin-bottom: 1.3rem;
}
.securi-descript {
	font-size: 1.4rem;
	font-family: "Raleway", sans-serif;
}

.securi-text {
	font-family: "Raleway", sans-serif;
	margin-top: 0.4rem;
	line-height: 1.3rem;
	max-width: 85%;
	font-size: 0.9rem;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.collab img {
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 4.5rem;
	margin-bottom: 1.3rem;
}
.collab-descript {
	font-size: 1.4rem;
	font-family: "Raleway", sans-serif;
}

.collab-text {
	font-family: "Raleway", sans-serif;
	margin-top: 0.4rem;
	line-height: 1.3rem;
	max-width: 85%;
	font-size: 0.9rem;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.file img {
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 4.5rem;
	margin-bottom: 1.3rem;
}
.file-descript {
	font-size: 1.4rem;
	font-family: "Raleway", sans-serif;
}

.file-text {
	font-family: "Raleway", sans-serif;
	margin-top: 0.4rem;
	line-height: 1.3rem;
	max-width: 89%;
	font-size: 0.9rem;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.illus2-image {
	max-width: 80%;
	margin-top: 3.5rem;
	margin-left: auto;
	margin-right: auto;
	display: block;
}

.illustrate-23 {
	text-align: left;
	font-size: 1.2rem;
	font-family: "Raleway", sans-serif;
	display: block;
	margin-top: 3rem;
	margin-left: 1.4rem;
}

.illustrate-2 p {
	font-size: 0.9rem;
	font-family: "Raleway", sans-serif;
	text-align: left;
	max-width: 90%;
	margin-left: 1.4rem;
	line-height: 1.3rem;
	margin-top: 1rem;
}

.illustrate-2 .p2 {
	max-width: 85%;
}

.seehow p {
	color: rgb(101, 226, 217);
	font-family: "Raleway", sans-serif;
	text-align: left;
	font-size: smaller;
	margin-top: 1rem;
	margin-left: 1.5rem;
}

.seehow img {
	position: relative;
	top: -15px;
	left: -1.6rem;
}

.line {
	border: 0.9px solid rgb(101, 226, 217);
	width: 143px;
	position: relative;
	margin-left: 1.56rem;
	margin-top: -0.8rem;
}

.testimony-card-1 {
	background-color: hsl(219, 30%, 18%);
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 80%;
	border-radius: 3px;
	height: 12rem;
	font-family: "Raleway", sans-serif;
	margin-top: 10rem;
	z-index: 1;
	position: relative;
}

.about-wit {
	text-align: left;
	line-height: 21px;
	width: 86%;
	font-size: 11.5px;
	display: block;
	margin-left: auto;
	margin-right: auto;
	padding-top: 2rem;
}

.witness-info img {
	width: 11%;
	border-radius: 50%;
	position: relative;
	left: 5%;
	top: 1.2rem;
}

b.wit-name1 {
	font-size: 10px;
	display: block;
	margin-left: -8.5rem;
}

p.wit-work {
	margin-left: -5.7rem;
	margin-top: -0.8rem;
	font-size: 9px;
}

.wit-info {
	position: relative;
	top: -0.7rem;
	right: -0.3rem;
}

.quote {
	width: 10%;
	position: relative;
	top: 10.6rem;
	left: 3rem;
}

.testimony-card-2 {
	background-color: hsl(219, 30%, 18%);
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 80%;
	border-radius: 3px;
	height: 12rem;
	font-family: "Raleway", sans-serif;
	margin-top: 2rem;
	z-index: 1;
	position: relative;
}

.about-wit2 {
	text-align: left;
	line-height: 21px;
	width: 86%;
	font-size: 11.5px;
	display: block;
	margin-left: auto;
	margin-right: auto;
	padding-top: 2rem;
}

.witness-info2 img {
	width: 11%;
	border-radius: 50%;
	position: relative;
	left: 5%;
	top: 1.2rem;
}

b.wit-name2 {
	font-size: 10px;
	display: block;
	margin-left: -7.05rem;
}

p.wit-work2 {
	margin-left: -5.7rem;
	margin-top: 0.3rem;
	font-size: 9px;
}

.wit-info2 {
	position: relative;
	top: -0.7rem;
	right: -0.3rem;
}

.testimony-card-3 {
	background-color: hsl(219, 30%, 18%);
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 80%;
	border-radius: 3px;
	height: 12rem;
	font-family: "Raleway", sans-serif;
	margin-top: 2rem;
	z-index: 1;
	position: relative;
}

.about-wit3 {
	text-align: left;
	line-height: 21px;
	width: 86%;
	font-size: 11.5px;
	display: block;
	margin-left: auto;
	margin-right: auto;
	padding-top: 2rem;
}

.witness-info3 img {
	width: 11%;
	border-radius: 50%;
	position: relative;
	left: 5%;
	top: 1.2rem;
}

b.wit-name3 {
	font-size: 10px;
	display: block;
	margin-left: -9.35rem;
}

p.wit-work3 {
	margin-left: -5.7rem;
	margin-top: 0.25rem;
	font-size: 9px;
}

.wit-info3 {
	position: relative;
	top: -0.7rem;
	right: -0.3rem;
}

.signup-card {
	background-color: hsl(217, 28%, 15%);
	display: block;
	margin-left: auto;
	margin-right: auto;
	padding-top: 3rem;
	width: 90%;
	border-radius: 3px;
	height: 26rem;
	font-family: "Raleway", sans-serif;
	margin-top: 2rem;
	z-index: 1;
	position: relative;
	box-shadow: 5px 2px 5px 1px rgba(0, 0, 0, 0.322);
}

b.signup {
	display: block;
}

p.signup-text {
	margin-top: 1rem;
	line-height: 25px;
	display: block;
	margin-left: auto;
	margin-right: auto;
	/* width: 93%; */
	max-width: 79%;
	font-size: 14px;
}

.signup-card input {
	border: none;
	width: 85%;
	height: 50px;
	background-color: hsl(0, 0%, 100%);
	border-radius: 50px;
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 2.5rem;
	font-family: "Raleway", sans-serif;
	font-size: 12px;
}

.signup-card input::placeholder {
	color: rgba(97, 96, 96, 0.281);
	position: relative;
	left: 12%;
}

.signup-card button {
	border: none;
	width: 85%;
	height: 50px;
	background-color: hsl(176, 68%, 64%);
	border-radius: 50px;
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: 2.5rem;
	font-size: 1rem;
	font-family: "Raleway", sans-serif;
	font-weight: 600;
}

.signup-card span {
	color: white;
}

.footer-logo {
	display: block;
	margin-left: 2rem;
}
.location-descript {
	margin-top: 1rem;
}
.location-descript img {
	position: relative;
	top: 1.7rem;
	left: 1.5rem;
}
.location-descript p {
	font-family: "Raleway", sans-serif;
	text-align: left;
	margin-left: 3.65rem;
	width: 65%;
	line-height: 23px;
	font-size: 14px;
}

.contact-container p {
	margin-left: 3.65rem;
	font-family: "Raleway", sans-serif;
	text-align: left;
	font-size: 14px;
	padding-bottom: 10px;
}

.contact-container img {
	position: relative;
	top: 1.5rem;
	left: 1.5rem;
}

.contact-container .email-image {
	position: relative;
	top: 1.3rem;
	left: 1.5rem;
}

